# ninsar-test

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
bot/: Dockerfile  pyproject.toml
bot/bot/: __main__.py  game_service.py  handlers.py  messages.py  settings.py  utils.py
server/: Dockerfile  pyproject.toml
server/server/guess_number_game/: apps.py  dependencies.py  dtos.py  models.py  serializers.py  services.py  urls.py  views.py
server/server/guess_number_game/migrations/: 0001_initial.py
server/server/server/: settings.py  urls.py
