[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Kamil Biktimirov <Biktimirov.kamil@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
